--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<ul id="band"></ul>
+		<ul id="bands"></ul>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
